2013-12-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* opl2ofm.{ch,web}: Drop ASCII_04, ASCII_10, ASCII_14, MBL_string,
	RI_string, RCE_string (all unused).
	* {opl2ofm,ovp2ovf}.web: Drop unused procedure out_digs().
	* {ofm2opl,opl2ofm,ovf2ovp,ovp2ovf}.{ch,web}: HEX has 16 bytes.

	* ovp2ovf.ch: Use make_suffix() for implied ofm_name.
	* selectfont.test: Add test for 'ovp2ovf foo.ovp bar.ovf'.
	* am/omegaware.am (DISTCLEANFILES): Additional files.

2013-01-24  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* otangle.test: Avoid spurious failure of parallel-tests.
	* am/etex.am: Renamed cftest.{web,ch,p} => cftest.{web,ch,p}.

2012-12-17  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/omegaware.am: Enable silent rules.

2012-07-15  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* odvicopy.ch, odvitype.ch, ofm2opl.ch, opl2ofm.ch, otangle.ch,
	ovf2ovp.ch, ovp2ovf.ch: Define and use my_name.

2012-05-15  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/omegaware.am: Add rule to build wovp2ovf.

2012-02-04  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* ovf2ovp.ch: Allow arbitrarily large TFM files as in TFtoPL.

	* opl2ofm.ch, ovp2ovf.ch: Avoid name conflict; MinGW defines
	`byte' in <rpcndr.h>.

2012-02-01  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* ofm2opl.web, ovf2ovp.web: Both nl and lig_size are in words,
	so the multiplication by 4 is not needed.

	* ofm2opl.ch: Handle tfm_file_array as in TFtoPL, i.e., allocate
	with a small initial size and reallocate as needed.

	* ofm2opl.ch, opl2ofm.web: Remove unused constant tfm_size.

2012-01-24  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* opl2ofm.web, ovp2ovf.web: Interpret "--" as "+", not "-".

	* realnum.test, tests/realnum.opl, tests/realnum.out (new):
	Shell script and data for a new test.
	* am/omegaware.am: Add the new test.

2012-01-22  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* ofm2opl.web, ovf2ovp.web: Add missing space in error message.

2011-12-23  Peter Breitenlohner  <peb@mppmu.mpg.de>
