@@ -102,7 +102,8 @@ DISTCLEANFILES += ovp2ovf.web
 OTANGLE_tests = omegaware/odvicopy.test omegaware/odvitype.test \
 	omegaware/otangle.test
 OMFONTS_tests = omegaware/level1.test omegaware/ofonts.test \
-	omegaware/omfonts.test omegaware/realnum.test omegaware/repeat.test \
+	omegaware/omfonts.test omegaware/overbmp.test\
+	omegaware/realnum.test omegaware/repeat.test \
 	omegaware/selectfont.test omegaware/specialhex.test
 EXTRA_DIST += $(OTANGLE_tests) $(OMFONTS_tests)
 
@@ -145,6 +146,9 @@ EXTRA_DIST += omegaware/tests/Cherokee.pl omegaware/tests/OCherokee.ovp
 DISTCLEANFILES += omegaware/tests/Cherokee.tfm omegaware/tests/OCherokee.ofm \
 	omegaware/tests/OCherokee.opl omegaware/tests/OCherokee.ovf \
 	omegaware/tests/xCherokee.* omegaware/tests/xOCherokee.*
+## omegaware/overbmp.test
+EXTRA_DIST += omegaware/tests/inbmp0.opl omegaware/tests/overbmp.ovp
+DISTCLEANFILES += omegaware/tests/inbmp1.* omegaware/tests/xoverbmp.*
 ## omegaware/otangle.test
 DISTCLEANFILES += ocftest.*
 ## omegaware/realnum.test
