@@ -1,0 +1,16 @@
+(OFMLEVEL H 0)
+(FONTDIR TL)
+(FAMILY UNSPECIFIED)
+(FACE F MRR)
+(CODINGSCHEME UNSPECIFIED)
+(DESIGNSIZE R 10.0)
+(COMMENT DESIGNSIZE IS IN POINTS)
+(COMMENT OTHER SIZES ARE MULTIPLES OF DESIGNSIZE)
+(CHECKSUM H AA6297E0)
+(SEVENBITSAFEFLAG FALSE)
+(CHARACTER H 4E00
+   (CHARWD R 1.0)
+   )
+(CHARACTER H 53F1
+   (CHARWD R 1.0)
+   )
