@@ -1,0 +1,49 @@
+(VTITLE JVF with characters above the Basic Multilingual Plane)
+(OFMLEVEL H 1)
+(FONTDIR TL)
+(FAMILY UNSPECIFIED)
+(FACE F MRR)
+(CODINGSCHEME UNSPECIFIED)
+(DESIGNSIZE R 10.0)
+(COMMENT DESIGNSIZE IS IN POINTS)
+(COMMENT OTHER SIZES ARE MULTIPLES OF DESIGNSIZE)
+(CHECKSUM H DD8C3992)
+(SEVENBITSAFEFLAG FALSE)
+(MAPFONT D 0
+   (FONTNAME inbmp1)
+   (FONTCHECKSUM H AA6297E0)
+   (FONTAT R 1.0)
+   (FONTDSIZE R 10.0)
+   )
+(MAPFONT D 1
+   (FONTNAME xoverbmp)
+   (FONTCHECKSUM H DD8C3992)
+   (FONTAT R 1.0)
+   (FONTDSIZE R 10.0)
+   )
+(CHARACTER H 4E00
+   (CHARWD R 1.0)
+   (MAP
+      (SETCHAR H 4E00)
+      )
+   )
+(CHARACTER H 53F1
+   (CHARWD R 1.0)
+   (MAP
+      (SELECTFONT D 1)
+      (SETCHAR H 20B9F)
+      )
+   )
+(CHARACTER H 20B9F
+   (CHARWD R 1.0)
+   (MAP
+      (SELECTFONT D 1)
+      (SETCHAR H 20BB7)
+      )
+   )
+(CHARACTER H 20BB7
+   (CHARWD R 1.0)
+   (MAP
+      (SETCHAR H 53F1)
+      )
+   )
